# a2a-demo

./: GRADIO_UI_README.md  QUICKSTART.md  QUICKSTART_UI.md  README.md  UI_FEATURES_OVERVIEW.md  UI_IMPLEMENTATION_SUMMARY.md  example.py  gradio_ui.py  launch_ui.sh  pyproject.toml
src/a2a_demo/: __init__.py  config.py
src/a2a_demo/agents/: __init__.py  base_agent.py  calculator_agent.py  orchestrator_agent.py  translator_agent.py
src/a2a_demo/client/: __init__.py  a2a_client.py
src/a2a_demo/models/: __init__.py  agent_card.py  jsonrpc.py  task.py
tests/: test_agents.py  test_models.py
