[project]
name = "a2a-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Mahmood Hanif", email = "mmhanif@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "flask>=3.1.2",
    "gradio>=5.0.0",
    "pytest>=8.4.2",
    "pytest-mock>=3.15.1",
    "requests>=2.32.5",
]

[project.scripts]
a2a-demo = "a2a_demo:main"

[build-system]
requires = ["uv_build>=0.8.13,<0.9.0"]
build-backend = "uv_build"
